HelloUltraviolet/Fixtures/RejectedSource/SourceText/UnterminatedBlockComment/Expected.uv
//! Expected diagnostic metadata for the UnterminatedBlockComment rejected-source specimen.

expectedDiagnostic("E-SRC-0306", "Block-Comment-Unterminated")
